--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -42,6 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "{% cite signaltrain %}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Poisson distribution"
    ]
   },
@@ -833,6 +840,20 @@
     "\n",
     "https://www.wikiwand.com/en/Poisson_distribution"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% bibliography --cited %}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
