--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -42,6 +42,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Hello This is a markdown page {% cite signaltrain %}"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Poisson distribution"
    ]
   },
@@ -832,6 +839,13 @@
     "http://onbiostatistics.blogspot.com/2014/03/computing-confidence-interval-for.html\n",
     "\n",
     "https://www.wikiwand.com/en/Poisson_distribution"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "{% bibliography --cited %}"
    ]
   }
  ],
