--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -4,14 +4,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# \"Title\"\n",
-    "> \"Awesome summary\"\n",
+    "# \"Poisson Distribution\"\n",
+    "> \"My reference notebook for the poisson distribution.\"\n",
     "\n",
-    "- toc: false\n",
+    "- author: Christopher Thiemann\n",
+    "- toc: true\n",
     "- branch: master\n",
     "- badges: true\n",
     "- comments: true\n",
-    "- categories: [statistics, distributions, poisson]\n",
+    "- categories: [statistics, distributions]\n",
     "- hide: false\n",
     "- search_exclude: true\n",
     "- metadata_key1: metadata_value1\n",
@@ -24,6 +25,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "#collapse-hide\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
     "from scipy.stats import poisson\n",
@@ -36,6 +38,20 @@
     "sns.set_context('notebook')\n",
     "\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#hide\n",
+    "fig, axes = plt.subplots()\n",
+    "sns.distplot(np.random.poisson(2, 10000), kde = False, ax = axes, color = 'red', norm_hist = True)\n",
+    "\n",
+    "sns.despine(fig)\n",
+    "plt.savefig(r\"./my_icons/statistics/distributions/poisson.png\")"
    ]
   },
   {
