restored test notebook to see i image appears there again

--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -17,7 +17,7 @@
     "- search_exclude: true\n",
     "- metadata_key1: metadata_value1\n",
     "- metadata_key2: metadata_value2\n",
-    "- image: _notebooks/my_icons/statistics/distributions/poisson.png"
+    "- image: images/poisson.png"
    ]
   },
   {
