--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -326,10 +326,8 @@
     }
    ],
    "source": [
-    "# hide\n",
+    "#hide_input\n",
     "sns.distplot(np.random.poisson(0.05 * 50, 10000), kde = False)\n",
-    "\n",
-    "\n",
     "sns.distplot(np.random.binomial(50, 0.05, 10000), kde = False);\n"
    ]
   },
@@ -556,6 +554,7 @@
     }
    ],
    "source": [
+    "#hide\n",
     "from pymc3 import Model, Uniform, Exponential, Poisson, Gamma, Normal\n",
     "from pymc3.math import switch\n",
     "\n",
@@ -614,7 +613,7 @@
     }
    ],
    "source": [
-    "# hide\n",
+    "#hide_input\n",
     "az.plot_trace(trace);\n",
     "#data.events"
    ]
