Added reference to statistical learning with sparsity.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -13,3 +13,10 @@
   year={2020},
   volume={abs/2006.05584} 
 }
+
+@book{sparsity,
+  title={Statistical learning with sparsity: the lasso and generalizations},
+  author={Hastie, Trevor and Tibshirani, Robert and Wainwright, Martin},
+  year={2015},
+  publisher={CRC press}
+}
