Add some todos.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -20,3 +20,10 @@
   year={2015},
   publisher={CRC press}
 }
+
+@book{murphy2012machine,
+  title={Machine learning: a probabilistic perspective},
+  author={Murphy, Kevin P},
+  year={2012},
+  publisher={MIT press}
+}
