--- a/_notebooks/2020-08-22-lasso.ipynb
+++ b/_notebooks/2020-08-22-lasso.ipynb
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -37,7 +37,7 @@
     "#hide\n",
     "import matplotlib.pyplot as plt\n",
     "import numpy as np\n",
-    "import gif\n",
+    "#import gif\n",
     "from itertools import cycle\n",
     "import seaborn as sns\n",
     "sns.set()"
@@ -723,8 +723,7 @@
     "axins.contour(XX, YY, DD, AA[1690:1691])\n",
     "axins.set_xlim([-1, 1])\n",
     "axins.set_ylim([-1, 1])\n",
-    "axes.indicate_inset_zoom(axins)\n",
-    "plt.savefig(\"lasso.png\");"
+    "axes.indicate_inset_zoom(axins);"
    ]
   },
   {
@@ -739,7 +738,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 20,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/",
@@ -762,6 +761,7 @@
     }
    ],
    "source": [
+    "#hide_input\n",
     "np.random.seed(123)\n",
     "\n",
     "num_coef = 50\n",
@@ -800,7 +800,9 @@
     "  axes.set_ylabel(r\"$\\beta_{Lasso}$\")\n",
     "  axes.set_xlim([0, 1])\n",
     "  axes.set_title(\"Solution Path\")\n",
-    "    \n"
+    "    \n",
+    "\n",
+    "fig.savefig(\"lasso.png\")\n"
    ]
   },
   {
@@ -815,7 +817,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 18,
    "metadata": {
     "colab": {},
     "colab_type": "code",
