--- a/_notebooks/2020-08-26-statistics_for_hackers.ipynb
+++ b/_notebooks/2020-08-26-statistics_for_hackers.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#hide_input\n",
     "fig, axes = plt.subplots()\n",
     "\n",
     "x = np.linspace(-10, 15, 200)\n",
@@ -106,7 +106,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#hide_input\n",
     "fig, axes = plt.subplots(1, 2, figsize = (10, 5))\n",
     "\n",
     "x = np.linspace(-10, 15, 200)\n",
@@ -259,27 +259,6 @@
    "source": [
     "{% bibliography --cited %}"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
