--- a/_notebooks/2020-08-26-statistics_for_hackers.ipynb
+++ b/_notebooks/2020-08-26-statistics_for_hackers.ipynb
@@ -257,6 +257,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "## References"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "{% bibliography --cited %}"
    ]
   }
