--- a/_notebooks/2020-08-26-qq_plot.ipynb
+++ b/_notebooks/2020-08-26-qq_plot.ipynb
@@ -115,7 +115,7 @@
     }
    ],
    "source": [
-    "#hide-collaps\n",
+    "#hide_collaps\n",
     "from matplotlib.patches import ConnectionPatch\n",
     "\n",
     "fig, axes = plt.subplots(2,2, tight_layout = False, sharex = False, sharey = False, figsize = (10, 10))\n",
@@ -191,7 +191,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "On the plot left shows the sample distribution of a gamma distribution. Note that it is right skewed. The bottom right plot shows the standart normal with its quantiles. Note that the quantiles are stacked more clsoly around zero because there is a lot of probability mass. The top right plot then shows a scatter plot of the empirical with the theoretical quantiles with a linear model fitted to the data. By construction the sample distribution isnt normal. This shows that the relationship is bended inwards. At the begining a high density area of the sample distribution is confronted with the low density are of the normal hence for each step in the normal quantile direction we barely move in the sample quantile space. The explains the bend."
+    "The plot left shows the sample distribution of a gamma distribution. Note that it is right-skewed. The bottom right plot shows the standard normal with its quantiles. Note that the quantiles are stacked more closely around zero because there is a lot of probability mass. The top right plot then shows a scatter plot of the empirical with the theoretical quantiles with a linear model fitted to the data. By construction, the sample distribution isn't normal. This shows that the relationship is bent inwards. In the beginning, a high-density area of the sample distribution is confronted with the low density are of the normal hence for each step in the normal quantile direction we barely move in the sample quantile space. This explains the bend."
    ]
   },
   {
