--- a/_notebooks/2020-08-26-statistics_for_hackers.ipynb
+++ b/_notebooks/2020-08-26-statistics_for_hackers.ipynb
@@ -243,7 +243,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: Add simulation of transformed r.v.\n",
+    "## TODO: Add simulation of transformed r.v."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "as in {% cite murphy2012machine %}"
    ]
   },
