Try out hide feature.

--- a/_notebooks/2020-08-30-logistic_regression.ipynb
+++ b/_notebooks/2020-08-30-logistic_regression.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [statistics, machine learning, regression]\n",
-    "- hide: false\n",
+    "- hide: true\n",
     "- search_exclude: true\n",
     "- image: images/logistic_regression.png"
    ]
@@ -563,7 +563,7 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#hide_input\n",
     "fig, axes = plt.subplots(1, 2, tight_layout = True)\n",
     "sns.stripplot(x = 'species', y = 'bill_depth_mm', data = df, ax = axes[0])\n",
     "sns.stripplot(x = 'species', y = 'body_mass_g', data = df, ax = axes[1]);"
