--- a/_notebooks/2020-08-26-qq_plot.ipynb
+++ b/_notebooks/2020-08-26-qq_plot.ipynb
@@ -99,6 +99,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot for blog post"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 158,
    "metadata": {},
@@ -115,7 +122,7 @@
     }
    ],
    "source": [
-    "#hide_collaps\n",
+    "#hide-collaps\n",
     "from matplotlib.patches import ConnectionPatch\n",
     "\n",
     "fig, axes = plt.subplots(2,2, tight_layout = False, sharex = False, sharey = False, figsize = (10, 10))\n",
@@ -198,14 +205,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: Add quantile plot to analyse two empirical distributions"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: Add worm plot"
+    "## to do list \n",
+    "- worm plot\n",
+    "- two sample quantile plot"
    ]
   },
   {
