--- a/_notebooks/2020-08-26-statistics_for_hackers.ipynb
+++ b/_notebooks/2020-08-26-statistics_for_hackers.ipynb
@@ -243,21 +243,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## TODO: Add simulation of transformed r.v."
+    "## to do list"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "as in {% cite murphy2012machine %}"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "## TODO: Add generalized monte carlo integration of objects of the form E(g(x))"
+    "- add simulation of transfomed r.v. as in {% cite murphy2012machine %}\n",
+    "- Add generalized monte carlo integration of objects of the form E(g(x))"
    ]
   },
   {
