--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -42,6 +42,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Plot for the blog post"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 11,
    "metadata": {},
@@ -58,19 +65,11 @@
     }
    ],
    "source": [
-    "#hide\n",
+    "#hide-collaps\n",
     "fig, axes = plt.subplots()\n",
     "sns.distplot(np.random.poisson(2, 10000), kde = False, ax = axes, color = 'red', norm_hist = True)\n",
     "sns.despine(fig)\n",
     "plt.savefig(r\"./my_icons/statistics/distributions/poisson.png\")"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "#hide\n",
-    "Hello This is a markdown page {% cite signaltrain %}"
    ]
   },
   {
