--- a/_notebooks/2020-08-18-poisson-distribution.ipynb
+++ b/_notebooks/2020-08-18-poisson-distribution.ipynb
@@ -65,7 +65,7 @@
     }
    ],
    "source": [
-    "#hide-collaps\n",
+    "#collaps\n",
     "fig, axes = plt.subplots()\n",
     "sns.distplot(np.random.poisson(2, 10000), kde = False, ax = axes, color = 'red', norm_hist = True)\n",
     "sns.despine(fig)\n",
