--- a/_notebooks/2020-08-30-logistic_regression.ipynb
+++ b/_notebooks/2020-08-30-logistic_regression.ipynb
@@ -884,6 +884,7 @@
     }
    ],
    "source": [
+    "#collaps\n",
     "model = LogisticRegression(penalty = 'none')\n",
     "np.random.seed(3)\n",
     "X = np.random.randn(50, 1)\n",
