--- a/_notebooks/2020-08-23-Hypothses_testing.ipynb
+++ b/_notebooks/2020-08-23-Hypothses_testing.ipynb
@@ -78,7 +78,7 @@
     }
    ],
    "source": [
-    "#hide-collaps\n",
+    "#collaps\n",
     "fig, axes = plt.subplots(tight_layout = True, figsize = (10, 5))\n",
     "\n",
     "x = np.linspace(-5, 5)\n",
