--- a/_notebooks/2020-08-26-qq_plot.ipynb
+++ b/_notebooks/2020-08-26-qq_plot.ipynb
@@ -70,7 +70,7 @@
     }
    ],
    "source": [
-    "#hide-collaps\n",
+    "#collaps\n",
     "fig, axes = plt.subplots()\n",
     "\n",
     "norm1 = norm.ppf(np.linspace(0.01, .99, 100))\n",
