Added l1 trend filtering.

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -27,3 +27,14 @@
   year={2012},
   publisher={MIT press}
 }
+
+@article{l1trendfilter,
+  title={$\backslash$ell\_1 trend filtering},
+  author={Kim, Seung-Jean and Koh, Kwangmoo and Boyd, Stephen and Gorinevsky, Dimitry},
+  journal={SIAM review},
+  volume={51},
+  number={2},
+  pages={339--360},
+  year={2009},
+  publisher={SIAM}
+}
