--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -38,3 +38,11 @@
   year={2009},
   publisher={SIAM}
 }
+
+
+@article{udell2014generalized,
+  title={Generalized low rank models},
+  author={Udell, Madeleine and Horn, Corinne and Zadeh, Reza and Boyd, Stephen},
+  journal={arXiv preprint arXiv:1410.0342},
+  year={2014}
+}
