--- a/_notebooks/2020-09-10-GLM.ipynb
+++ b/_notebooks/2020-09-10-GLM.ipynb
@@ -13,7 +13,7 @@
     "- badges: true\n",
     "- comments: true\n",
     "- categories: [statistics, regression]\n",
-    "- hide: false\n",
+    "- hide: true\n",
     "- search_exclude: true\n",
     "- image: images/poisson.png"
    ]
