--- a/_notebooks/2020-09-07-glrm.ipynb
+++ b/_notebooks/2020-09-07-glrm.ipynb
@@ -41,7 +41,7 @@
         "- badges: true\n",
         "- comments: true\n",
         "- categories: [statistics, distributions]\n",
-        "- hide: false\n",
+        "- hide: true\n",
         "- search_exclude: true"
       ]
     },
