--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -1,19 +1,3 @@
-@conference{signaltrain,
-  title = {Profiling Audio Compressors with Deep Neural Networks},
-  author = {Hawley, Scott H. and Colburn, Benjamin and Mimilakis, Stylianos Ioannis},
-  booktitle = {Audio Engineering Society Convention 147},
-  month = {Oct},
-  year = {2019},
-}               
-
-@article{billy_signaltrain2, 
-  title={Exploring Quality and Generalizability in Parameterized Neural Audio Effects},
-  author={William Mitchell and Scott H. Hawley},
-  journal={ArXiv},  
-  year={2020},
-  volume={abs/2006.05584} 
-}
-
 @book{sparsity,
   title={Statistical learning with sparsity: the lasso and generalizations},
   author={Hastie, Trevor and Tibshirani, Robert and Wainwright, Martin},
@@ -26,6 +10,13 @@
   author={Murphy, Kevin P},
   year={2012},
   publisher={MIT press}
+}
+
+@book{statistik,
+  title={Statistik},
+  author={Günter Bamberg et al.},
+  year={2012},
+  publisher={Oldenbourg Verlag}
 }
 
 @article{l1trendfilter,
