--- a/_notebooks/2020-09-27-prob_theory.ipynb
+++ b/_notebooks/2020-09-27-prob_theory.ipynb
@@ -317,7 +317,7 @@
   },
   {
    "source": [
-    "## Two important asyptotic results"
+    "## Some important asyptotic results"
    ],
    "cell_type": "markdown",
    "metadata": {}
@@ -381,6 +381,13 @@
   },
   {
    "source": [
+    "### Delta Method"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
+  },
+  {
+   "source": [
     "## Plot for blog post"
    ],
    "cell_type": "markdown",
@@ -420,6 +427,18 @@
     "\n",
     "fig.savefig(\"empirical_distribution_function.png\")"
    ]
+  },
+  {
+   "source": [
+    "## TODO\n",
+    "\n",
+    "Incorporate formulars from these sources\n",
+    "\n",
+    "- [link](https://static1.squarespace.com/static/54bf3241e4b0f0d81bf7ff36/t/55e9494fe4b011aed10e48e5/1441352015658/probability_cheatsheet.pdf)\n",
+    "- [link](https://www.uio.no/studier/emner/matnat/math/STK1100/v16/formelsamling-stk-1100-1110_eng_nov_2015.pdf)"
+   ],
+   "cell_type": "markdown",
+   "metadata": {}
   },
   {
    "source": [
