Added post on SVD.

--- a/_notebooks/2020-09-27-prob_theory.ipynb
+++ b/_notebooks/2020-09-27-prob_theory.ipynb
@@ -381,7 +381,7 @@
   },
   {
    "source": [
-    "### Delta Method"
+    "### Delta Method\n"
    ],
    "cell_type": "markdown",
    "metadata": {}
