changed base notwbook

--- a/_bibliography/references.bib
+++ b/_bibliography/references.bib
@@ -37,3 +37,18 @@
   journal={arXiv preprint arXiv:1410.0342},
   year={2014}
 }
+
+@book{james2013introduction,
+  title={An introduction to statistical learning},
+  author={James, Gareth and Witten, Daniela and Hastie, Trevor and Tibshirani, Robert},
+  volume={112},
+  year={2013},
+  publisher={Springer}
+}
+
+@book{gyorfi2006distribution,
+  title={A distribution-free theory of nonparametric regression},
+  author={Gy{\"o}rfi, L{\'a}szl{\'o} and Kohler, Michael and Krzyzak, Adam and Walk, Harro},
+  year={2006},
+  publisher={Springer Science \& Business Media}
+}
