--- a/_notebooks/2020-10-14-recursice_programming.ipynb
+++ b/_notebooks/2020-10-14-recursice_programming.ipynb
@@ -102,7 +102,7 @@
         "rlib.utils.install_packages(\"tidyverse\")\n",
         "rlib.utils.install_packages(\"GGally\")"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -412,7 +412,7 @@
         "library(tidyverse)\n",
         "library(GGally)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -475,7 +475,7 @@
         "\n",
         "fact(5)"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -516,7 +516,7 @@
         "import sys\n",
         "sys.getrecursionlimit()"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -545,7 +545,7 @@
       "cell_type": "code",
       "metadata": {
         "id": "73A5R7FfH9Rs",
-        "outputId": "d34f8f85-0633-4a93-8ffd-52bcb1d819b9",
+        "outputId": "903236f2-10e2-4c59-e434-d0d7166b7e1d",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 34
@@ -554,11 +554,14 @@
       "source": [
         "def fact(x):\n",
         "\n",
+        "    if x == 1:\n",
+        "        return 1\n",
+        "\n",
         "    return x * fact( x - 1)\n",
         "\n",
         "fact(5)"
       ],
-      "execution_count": 15,
+      "execution_count": 1,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -570,7 +573,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 15
+          "execution_count": 1
         }
       ]
     },
@@ -611,7 +614,7 @@
         "\n",
         "fib(10)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -672,7 +675,7 @@
         "\n",
         "gradient_descent(np.array([0,0]), np.array([1, 1]), gradient, X ,y)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
