--- a/_notebooks/2020-10-14-recursice_programming.ipynb
+++ b/_notebooks/2020-10-14-recursice_programming.ipynb
@@ -52,15 +52,11 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "QttsXRqKC-sE",
-        "outputId": "eb39a083-52ce-4ea1-8cd8-3eefcfd866ec",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 1000
-        }
+        "id": "QttsXRqKC-sE"
       },
       "source": [
         "#hide\n",
+        "%%capture\n",
         "import warnings\n",
         "\n",
         "\n",
@@ -102,340 +98,23 @@
         "rlib.utils.install_packages(\"tidyverse\")\n",
         "rlib.utils.install_packages(\"GGally\")"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
-            "  import pandas.util.testing as tm\n",
-            "/usr/local/lib/python3.6/dist-packages/rpy2/robjects/pandas2ri.py:34: UserWarning: pandas >= 1.0 is not supported.\n",
-            "  warnings.warn('pandas >= 1.0 is not supported.')\n",
-            "/usr/local/lib/python3.6/dist-packages/rpy2/robjects/vectors.py:927: UserWarning: R object inheriting from \"POSIXct\" but without attribute \"tzone\".\n",
-            "  warnings.warn('R object inheriting from \"POSIXct\" but without '\n",
-            "R[write to console]: Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/tidyverse_1.3.0.tar.gz'\n",
-            "\n",
-            "R[write to console]: Content type 'application/x-gzip'\n",
-            "R[write to console]:  length 712837 bytes (696 KB)\n",
-            "\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: downloaded 696 KB\n",
-            "\n",
-            "\n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: \n",
-            "R[write to console]: The downloaded source packages are in\n",
-            "\t‘/tmp/RtmpXiEXdv/downloaded_packages’\n",
-            "R[write to console]: \n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: Installing package into ‘/usr/local/lib/R/site-library’\n",
-            "(as ‘lib’ is unspecified)\n",
-            "\n",
-            "R[write to console]: also installing the dependencies ‘plyr’, ‘reshape’\n",
-            "\n",
-            "\n",
-            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/plyr_1.8.6.tar.gz'\n",
-            "\n",
-            "R[write to console]: Content type 'application/x-gzip'\n",
-            "R[write to console]:  length 401191 bytes (391 KB)\n",
-            "\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: downloaded 391 KB\n",
-            "\n",
-            "\n",
-            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/reshape_0.8.8.tar.gz'\n",
-            "\n",
-            "R[write to console]: Content type 'application/x-gzip'\n",
-            "R[write to console]:  length 42558 bytes (41 KB)\n",
-            "\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: downloaded 41 KB\n",
-            "\n",
-            "\n",
-            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/GGally_2.0.0.tar.gz'\n",
-            "\n",
-            "R[write to console]: Content type 'application/x-gzip'\n",
-            "R[write to console]:  length 1393325 bytes (1.3 MB)\n",
-            "\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: =\n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: downloaded 1.3 MB\n",
-            "\n",
-            "\n",
-            "R[write to console]: \n",
-            "\n",
-            "R[write to console]: \n",
-            "R[write to console]: The downloaded source packages are in\n",
-            "\t‘/tmp/RtmpXiEXdv/downloaded_packages’\n",
-            "R[write to console]: \n",
-            "R[write to console]: \n",
-            "\n"
-          ],
-          "name": "stderr"
-        },
-        {
-          "output_type": "execute_result",
-          "data": {
-            "text/plain": [
-              "<rpy2.rinterface.NULLType object at 0x7fd6d3cbe808> [RTYPES.NILSXP]"
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 1
-        }
-      ]
+      "execution_count": 4,
+      "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Y4VPsVWRC-sJ",
-        "outputId": "f7889d77-9889-4e2e-8b5a-8ca1d65275f3",
-        "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 272
-        }
+        "id": "Y4VPsVWRC-sJ"
       },
       "source": [
         "#hide\n",
         "# load r packages\n",
         "%%R \n",
-        "library(tidyverse)\n",
-        "library(GGally)"
+        "library(tidyverse, quietly = TRUE)\n",
+        "library(GGally, quietly = TRUE)"
       ],
-      "execution_count": null,
-      "outputs": [
-        {
-          "output_type": "stream",
-          "text": [
-            "R[write to console]: ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
-            "\n",
-            "R[write to console]: ✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
-            "✔ tibble  3.0.3     ✔ dplyr   1.0.2\n",
-            "✔ tidyr   1.1.2     ✔ stringr 1.4.0\n",
-            "✔ readr   1.3.1     ✔ forcats 0.5.0\n",
-            "\n",
-            "R[write to console]: ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
-            "✖ dplyr::filter() masks stats::filter()\n",
-            "✖ dplyr::lag()    masks stats::lag()\n",
-            "\n",
-            "R[write to console]: Registered S3 method overwritten by 'GGally':\n",
-            "  method from   \n",
-            "  +.gg   ggplot2\n",
-            "\n"
-          ],
-          "name": "stderr"
-        }
-      ]
+      "execution_count": 7,
+      "outputs": []
     },
     {
       "cell_type": "markdown",
@@ -561,7 +240,7 @@
         "\n",
         "fact(5)"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
