--- a/_notebooks/2020-10-16-learn_bayes_podcast.ipynb
+++ b/_notebooks/2020-10-16-learn_bayes_podcast.ipynb
@@ -53,7 +53,11 @@
       "cell_type": "code",
       "metadata": {
         "id": "xraFuLIIi_zZ",
-        "outputId": "14b2151c-849d-411a-8593-414bbfefffee"
+        "outputId": "374cc4bf-9573-4320-8dfd-3041216573b5",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 1000
+        }
       },
       "source": [
         "#hide\n",
@@ -98,25 +102,308 @@
         "rlib.utils.install_packages(\"tidyverse\")\n",
         "rlib.utils.install_packages(\"GGally\")"
       ],
-      "execution_count": null,
+      "execution_count": 2,
       "outputs": [
         {
-          "output_type": "error",
-          "ename": "ModuleNotFoundError",
-          "evalue": "No module named 'sklearn'",
-          "traceback": [
-            "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m                       Traceback (most recent call last)",
-            "\u001b[1;32m<ipython-input-3-e2a0fbb86c93>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[0;32m      5\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mnumpy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0mnp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      6\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mscipy\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msp\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 7\u001b[1;33m \u001b[1;32mimport\u001b[0m \u001b[0msklearn\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      8\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapi\u001b[0m \u001b[1;32mas\u001b[0m \u001b[0msm\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      9\u001b[0m \u001b[1;32mfrom\u001b[0m \u001b[0mstatsmodels\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mformula\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mapi\u001b[0m \u001b[1;32mimport\u001b[0m \u001b[0mols\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-            "\u001b[1;31mModuleNotFoundError\u001b[0m: No module named 'sklearn'"
-          ]
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.6/dist-packages/statsmodels/tools/_testing.py:19: FutureWarning: pandas.util.testing is deprecated. Use the functions in the public API at pandas.testing instead.\n",
+            "  import pandas.util.testing as tm\n",
+            "/usr/local/lib/python3.6/dist-packages/rpy2/robjects/pandas2ri.py:34: UserWarning: pandas >= 1.0 is not supported.\n",
+            "  warnings.warn('pandas >= 1.0 is not supported.')\n",
+            "/usr/local/lib/python3.6/dist-packages/rpy2/robjects/vectors.py:927: UserWarning: R object inheriting from \"POSIXct\" but without attribute \"tzone\".\n",
+            "  warnings.warn('R object inheriting from \"POSIXct\" but without '\n",
+            "R[write to console]: Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/tidyverse_1.3.0.tar.gz'\n",
+            "\n",
+            "R[write to console]: Content type 'application/x-gzip'\n",
+            "R[write to console]:  length 712837 bytes (696 KB)\n",
+            "\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: downloaded 696 KB\n",
+            "\n",
+            "\n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: \n",
+            "R[write to console]: The downloaded source packages are in\n",
+            "\t‘/tmp/RtmpHOIjzN/downloaded_packages’\n",
+            "R[write to console]: \n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: Installing package into ‘/usr/local/lib/R/site-library’\n",
+            "(as ‘lib’ is unspecified)\n",
+            "\n",
+            "R[write to console]: also installing the dependencies ‘plyr’, ‘reshape’\n",
+            "\n",
+            "\n",
+            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/plyr_1.8.6.tar.gz'\n",
+            "\n",
+            "R[write to console]: Content type 'application/x-gzip'\n",
+            "R[write to console]:  length 401191 bytes (391 KB)\n",
+            "\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: downloaded 391 KB\n",
+            "\n",
+            "\n",
+            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/reshape_0.8.8.tar.gz'\n",
+            "\n",
+            "R[write to console]: Content type 'application/x-gzip'\n",
+            "R[write to console]:  length 42558 bytes (41 KB)\n",
+            "\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: downloaded 41 KB\n",
+            "\n",
+            "\n",
+            "R[write to console]: trying URL 'https://cran.rstudio.com/src/contrib/GGally_2.0.0.tar.gz'\n",
+            "\n",
+            "R[write to console]: Content type 'application/x-gzip'\n",
+            "R[write to console]:  length 1393325 bytes (1.3 MB)\n",
+            "\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: =\n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: downloaded 1.3 MB\n",
+            "\n",
+            "\n",
+            "R[write to console]: \n",
+            "\n",
+            "R[write to console]: \n",
+            "R[write to console]: The downloaded source packages are in\n",
+            "\t‘/tmp/RtmpHOIjzN/downloaded_packages’\n",
+            "R[write to console]: \n",
+            "R[write to console]: \n",
+            "\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "<rpy2.rinterface.NULLType object at 0x7fe1d06bce48> [RTYPES.NILSXP]"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 2
         }
       ]
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "HFrOkGVzi_zf"
+        "id": "HFrOkGVzi_zf",
+        "outputId": "67cfc400-ab12-4d54-bbc5-10dd215c05ce",
+        "colab": {
+          "base_uri": "https://localhost:8080/",
+          "height": 272
+        }
       },
       "source": [
         "#hide\n",
@@ -125,8 +412,57 @@
         "library(tidyverse)\n",
         "library(GGally)"
       ],
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 3,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "R[write to console]: ── Attaching packages ─────────────────────────────────────── tidyverse 1.3.0 ──\n",
+            "\n",
+            "R[write to console]: ✔ ggplot2 3.3.2     ✔ purrr   0.3.4\n",
+            "✔ tibble  3.0.4     ✔ dplyr   1.0.2\n",
+            "✔ tidyr   1.1.2     ✔ stringr 1.4.0\n",
+            "✔ readr   1.4.0     ✔ forcats 0.5.0\n",
+            "\n",
+            "R[write to console]: ── Conflicts ────────────────────────────────────────── tidyverse_conflicts() ──\n",
+            "✖ dplyr::filter() masks stats::filter()\n",
+            "✖ dplyr::lag()    masks stats::lag()\n",
+            "\n",
+            "R[write to console]: Registered S3 method overwritten by 'GGally':\n",
+            "  method from   \n",
+            "  +.gg   ggplot2\n",
+            "\n"
+          ],
+          "name": "stderr"
+        }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "ZQezASRzkkYW"
+      },
+      "source": [
+        "## 4th episode with karin knudsen\n",
+        "\n",
+        "dirichlet process useful in infite gaussian mixtures\n",
+        "\n",
+        "stick breaking process:\n",
+        "take a stick of lenght one and break it into two pieces, the point where to break is determined by a beta distribuion with first parameter equal to one and the second to some number (it is the second parameter of teh dirch process, the first beein the base distribution)\n",
+        "\n",
+        "draw from base distribnutio and assign it the length of the stick"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GRN2CP_lkr22"
+      },
+      "source": [
+        "### From beta distribution to dirichlket process\n",
+        "\n",
+        "dirichklet is a multivariate generalization of the beta distribution\n"
+      ]
     },
     {
       "cell_type": "markdown",
