--- a/_notebooks/2020-10-10-FDA.ipynb
+++ b/_notebooks/2020-10-10-FDA.ipynb
@@ -36,17 +36,16 @@
       },
       "source": [
         "# \"Functional Data Analysis\"\n",
-        "> \"Subheader\"\n",
+        "> \"My refernce notebook for fda.\"\n",
         "\n",
         "- author: Christopher Thiemann\n",
         "- toc: true\n",
         "- branch: master\n",
         "- badges: true\n",
         "- comments: true\n",
-        "- categories: [statistics, ]\n",
+        "- categories: [statistics, functional data analysis]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
-        "- image: images/poisson.png"
+        "- search_exclude: true"
       ]
     },
     {
