--- a/_notebooks/2020-10-11-ML_interpretability.ipynb
+++ b/_notebooks/2020-10-11-ML_interpretability.ipynb
@@ -45,8 +45,7 @@
         "- comments: true\n",
         "- categories: [statistics, ]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
-        "- image: images/poisson.png"
+        "- search_exclude: true"
       ]
     },
     {
