--- a/_notebooks/2020-10-14-recursice_programming.ipynb
+++ b/_notebooks/2020-10-14-recursice_programming.ipynb
@@ -45,8 +45,7 @@
         "- comments: true\n",
         "- categories: [python, ]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
-        "- image: images/poisson.png"
+        "- search_exclude: true"
       ]
     },
     {
@@ -98,7 +97,7 @@
         "rlib.utils.install_packages(\"tidyverse\")\n",
         "rlib.utils.install_packages(\"GGally\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -113,7 +112,7 @@
         "library(tidyverse, quietly = TRUE)\n",
         "library(GGally, quietly = TRUE)"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": []
     },
     {
