--- a/_notebooks/2020-10-15-SQL.ipynb
+++ b/_notebooks/2020-10-15-SQL.ipynb
@@ -36,17 +36,16 @@
       },
       "source": [
         "# \"SQL\"\n",
-        "> \"Subheader\"\n",
+        "> \"Example database to learn and review SQL\"\n",
         "\n",
         "- author: Christopher Thiemann\n",
         "- toc: true\n",
         "- branch: master\n",
         "- badges: true\n",
         "- comments: true\n",
-        "- categories: [statistics, ]\n",
+        "- categories: [SQL, ]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
-        "- image: images/poisson.png"
+        "- search_exclude: true"
       ]
     },
     {
@@ -83,7 +82,7 @@
         "# load specific python package\n",
         "import sqlite3"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -101,7 +100,7 @@
         "!unzip database.zip\n",
         "!ls"
       ],
-      "execution_count": 31,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -138,7 +137,7 @@
         "        print(table_name[0])\n",
         "        print(pd.read_sql_query(f\"select * from {table_name[0]}\", con).head(), \"\\n\\n\\n\\n\\n\\n\")"
       ],
-      "execution_count": 85,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -400,7 +399,7 @@
       "source": [
         "pd.read_sql_query(\"select * from artists\", con, index_col='ArtistId')"
       ],
-      "execution_count": 87,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -519,7 +518,7 @@
       "source": [
         "pd.read_sql_query(\"select COUNT(AlbumId) as a from artists left join albums on artists.ArtistId = albums.ArtistId group by ArtistId\", con)"
       ],
-      "execution_count": 93,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
