--- a/_notebooks/2020-10-16-gary_king.ipynb
+++ b/_notebooks/2020-10-16-gary_king.ipynb
@@ -54,10 +54,9 @@
         "- branch: master\n",
         "- badges: true\n",
         "- comments: true\n",
-        "- categories: [statistics, ]\n",
+        "- categories: [ ]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
-        "- image: images/poisson.png"
+        "- search_exclude: true"
       ]
     },
     {
@@ -221,7 +220,7 @@
         "import matplotlib.pyplot as plt\n",
         "import seaborn as sns; sns.set()"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -238,7 +237,7 @@
         "data = np.random.normal(size = 200)\n",
         "sns.kdeplot(data)"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -283,7 +282,7 @@
         "y = test.evaluate(x)\n",
         "plt.plot(x, y)"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -324,7 +323,7 @@
       "source": [
         "sns.distplot(test.resample(10000))"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -375,7 +374,7 @@
         "essti.fit(data.reshape(-1, 1))\n",
         "sns.distplot(essti.sample(10000))"
       ],
-      "execution_count": 25,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
