--- a/_notebooks/2020-10-17-beta_dirichlet.ipynb
+++ b/_notebooks/2020-10-17-beta_dirichlet.ipynb
@@ -46,7 +46,7 @@
         "- comments: true\n",
         "- categories: [statistics, distributions]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
+        "- search_exclude: true"
       ]
     },
     {
