--- a/_notebooks/2020-10-18-pandas.ipynb
+++ b/_notebooks/2020-10-18-pandas.ipynb
@@ -45,7 +45,7 @@
         "- comments: true\n",
         "- categories: [python, ]\n",
         "- hide: false\n",
-        "- search_exclude: true\n",
+        "- search_exclude: true"
       ]
     },
     {
