--- a/_notebooks/2020-10-15-SQL.ipynb
+++ b/_notebooks/2020-10-15-SQL.ipynb
@@ -87,7 +87,7 @@
         "# load specific python package\n",
         "import sqlite3"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -114,7 +114,7 @@
         "!unzip database.zip\n",
         "!ls"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -150,7 +150,7 @@
         "        print(table_name[0])\n",
         "        print(pd.read_sql_query(f\"select * from {table_name[0]}\", con).head(), \"\\n\\n\\n\\n\\n\\n\")"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,7 +421,7 @@
       "source": [
         "pd.read_sql_query(\"select * from employees limit 10\", con)"
       ],
-      "execution_count": 37,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -684,7 +684,7 @@
         "\n",
         "pd.read_sql_query(query, con)"
       ],
-      "execution_count": 45,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -945,7 +945,7 @@
       "source": [
         "pd.read_sql_query(\"select * from employees limit 10 offset 3\", con)"
       ],
-      "execution_count": 39,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1250,7 +1250,7 @@
       "source": [
         "pd.read_sql_query(\"select * from artists inner join albums on artists.ArtistId = albums.ArtistId\", con)"
       ],
-      "execution_count": 51,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1425,7 +1425,7 @@
       "source": [
         "pd.read_sql_query(\"select * from media_types where Name like '5AAC%'\", con)"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1484,7 +1484,7 @@
       "source": [
         "pd.read_sql_query(\"select * from playlists where name like '_usic'\", con)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -1616,7 +1616,9 @@
         "\n",
         "- https://github.com/sql-machine-learning/sqlflow\n",
         "\n",
-        "- https://github.com/ibis-project/ibis\n"
+        "- https://github.com/ibis-project/ibis\n",
+        "\n",
+        "- https://gist.github.com/kdev33/97951cb3b9dd1459898a93b5702ed4cb"
       ]
     },
     {
