--- a/_notebooks/2020-10-16-gary_king.ipynb
+++ b/_notebooks/2020-10-16-gary_king.ipynb
@@ -108,7 +108,7 @@
         "rlib.utils.install_packages(\"tidyverse\")\n",
         "rlib.utils.install_packages(\"GGally\")"
       ],
-      "execution_count": null,
+      "execution_count": 1,
       "outputs": []
     },
     {
@@ -408,6 +408,34 @@
             "tags": []
           }
         }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "GVW3nS26fMXL"
+      },
+      "source": [
+        "## 8. Statistical Simulation\n",
+        "\n",
+        "Starting from the general model specification\n",
+        "\n",
+        "$y_i \\sim f(\\theta_i , \\alpha)$ stochastic component\n",
+        "\n",
+        "$\\theta_i=g(x_i, \\beta)$ systematic component\n",
+        "\n",
+        "Say we found the MLE estimator for $\\beta$ and $\\alpha$ called $\\hat{\\gamma}$. For this we can estimate the variance $\\hat{V}(\\hat{\\gamma})$ and we want to make inference for soe datapoint $X_c$. We can approcxciamte the asymptoic distribution by  $N[\\hat{\\gamma} ,\\hat{V}(\\hat{\\gamma})] $ With this we draw and calculate $\\theta_{sim}=g(x_c, \\beta_{sim})$ with this, teh draw from $\\alpha$ we can use the stochastic compnent to simulate $y$\n"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {
+        "id": "0nT0UXHsipKd"
+      },
+      "source": [
+        "### Example simple linear model\n",
+        "\n",
+        "$y_i \\sim N(\\mu_i, \\sigma^2)$ where the systematic component $\\mu_i=\\beta_0 + \\beta_1 x_i$. The MLE gives estimates for $\\beta_0$, $\\beta_1$ and $\\sigma^2$ and the correspodning covariance matrix for the estimates. Then draw from the multivariate normal the two betas and a sigma, calculate for some x the mean, with the calculated mean and the simulated sigma draw a y. Do this say 10000 times and look at the resulting distibution of y. This the uncertanity around the point estimate   \n"
       ]
     },
     {
