--- a/_notebooks/2020-10-23-altair.ipynb
+++ b/_notebooks/2020-10-23-altair.ipynb
@@ -44,7 +44,7 @@
         "- badges: true\n",
         "- comments: true\n",
         "- categories: [statistics, ]\n",
-        "- hide: false\n",
+        "- hide: true\n",
         "- search_exclude: true\n",
         "- image: images/poisson.png"
       ]
@@ -81,7 +81,7 @@
         "pd.set_option(\"display.max_columns\", 120)\n",
         "\n"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -107,7 +107,7 @@
         "df = sns.load_dataset('car_crashes')\n",
         "df.head()\n"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
         "  .properties(width=600, height=300) #ad extra properties independent of the mark and chart\n",
         "  .interactive())"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
