--- a/_notebooks/2020-10-20-julia.ipynb
+++ b/_notebooks/2020-10-20-julia.ipynb
@@ -34,7 +34,7 @@
         "- badges: true\n",
         "- comments: true\n",
         "- categories: [julia ]\n",
-        "- hide: false\n",
+        "- hide: true\n",
         "- search_exclude: true"
       ]
     },
